Source/WebCore/loader/HistoryController.cpp
@@ -79,7 +79,7 @@ void HistoryController::saveScrollPositionAndViewStateToItem(HistoryItem* item)
     if (!item || !m_frame->view())
         return;
         
-    item->setScrollPoint(m_frame->view()->scrollPosition());
+    item->setScrollPoint(m_frame->view()->cachedScrollPosition());
     item->setPageScaleFactor(m_frame->pageScaleFactor());
     
     // FIXME: It would be great to work out a way to put this code in WebCore instead of calling through to the client.
